# wifi-speaker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: main.rs
templates/: index.html  queue.html
