[package]
name = "wifi-speaker"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4"
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14.0"
futures = "0.3.30"
rodio = "0.17.3"
